Operations/Provisioning/templates/Tests/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: priv-gw

  labels:
    wan-mode: 'public'
    lan-mode: 'private'

spec:
  gatewayClassName: eg

  infrastructure:
    annotations:
      purelb.io/allow-shared-ip: priv-gw1.dc1.resolvemy.host
      purelb.io/allow-local: 'true'
      purelb.io/addresses: '10.1.1.80'

  listeners:
    - name: tls-https
      port: 443
      protocol: TLS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
