Operations/Provisioning/templates/Tests/TLSRoute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: idrac-node1
  
  labels:
    wan-mode: public
    lan-mode: private

spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: {{ .Release.Namespace}}
      name: priv-gw

  hostnames:
    - idrac.infra1.dc1.resolvemy.host

  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: idrac-node1

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: idrac-node1
spec:
  endpoints:
    - fqdn:
        hostname: 172.16.20.61
        port: 443
